updated data processor

--- a/Prepare_Data.ipynb
+++ b/Prepare_Data.ipynb
@@ -10,7 +10,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
       "Bluepy not installed...\n"
      ]
     }
@@ -21,7 +20,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "\n",
-    "import torch; print(torch.cuda.is_available())\n",
+    "# import torch; print(torch.cuda.is_available())\n",
     "\n",
     "import libemg\n",
     "from libemg.datasets import get_dataset_list\n",
@@ -42,21 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ed53ff1d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1000121, 8, 100)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from SPACESHIP import SPACESHIP\n",
     "dataset = SPACESHIP()\n",
@@ -67,7 +55,7 @@
     "\n",
     "np.save(join(path, 'ssl_data'), data)\n",
     "\n",
-    "ssl_windows, ssl_meta = data.parse_windows(SEQ, 40)\n",
+    "ssl_windows, ssl_meta = data.parse_windows(SEQ, SSL_INC)\n",
     "\n",
     "np.save(join(path, 'ssl_windows'), ssl_windows.astype(DTYPE))\n",
     "np.save(join(path, 'ssl_meta'), ssl_meta)\n",
@@ -77,34 +65,161 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "70597f4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gForceSGT import gForceSGT\n",
+    "dataset = gForceSGT()\n",
+    "data = dataset.prepare_data()\n",
+    "\n",
+    "path = join(PATH, 'sgt')\n",
+    "os.makedirs(path, exist_ok=True)\n",
+    "\n",
+    "np.save(join(path, 'sgt_data'), data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0b9209c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = join(PATH, 'sgt')\n",
+    "sgt_data = np.load(join(path, 'sgt_data.npy'), allow_pickle=True).item()\n",
+    "_data = sgt_data.isolate_data(\"subjects\", list(range(1)), fast=True)\n",
+    "\n",
+    "train_data = _data.isolate_data(\"rep_forms\", [0], fast=True)\n",
+    "train_data = _data.isolate_data(\"reps\", list(range(1)), fast=True)\n",
+    "train_windows, train_meta = train_data.parse_windows(SEQ, INC)\n",
+    "np.min(train_windows), np.mean(train_windows), np.max(train_windows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "501455f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = join(PATH, 'ssl')\n",
+    "train_windows = np.load(join(path, 'ssl_windows.npy'), mmap_mode=MMAP_MODE)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "id": "c1c98cde",
+   "id": "058a00be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = train_windows[::10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6fc55db8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ag = augment(torch.from_numpy(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b4d39436",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing dataset from data_sgt to data_sgt_PROCESSED...\n",
-      "Subject 0 processed. Output: data_sgt_PROCESSED/S0.h5\n",
-      "Subject 1 processed. Output: data_sgt_PROCESSED/S1.h5\n",
-      "Subject 2 processed. Output: data_sgt_PROCESSED/S2.h5\n",
-      "Subject 3 processed. Output: data_sgt_PROCESSED/S3.h5\n",
-      "Subject 4 processed. Output: data_sgt_PROCESSED/S4.h5\n",
-      "Subject 5 processed. Output: data_sgt_PROCESSED/S5.h5\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "((93422, 8, 100), (23599, 8, 100), (140627, 8, 100))"
+       "(-23.01625, -17.154947, -4.8020205)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "f = FeatureExtractor()\n",
+    "af = f.extract_features(['WENG'], a, feature_dic={'WENG_fs': 1000}, array=True)\n",
+    "np.min(af), np.mean(af), np.max(af)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bb370e22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-23.016283, -17.165705, -4.612915)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = FeatureExtractor()\n",
+    "af = f.extract_features(['WENG'], ag, feature_dic={'WENG_fs': 1000}, array=True)\n",
+    "np.min(af), np.mean(af), np.max(af)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f2bd0ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "af"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e3f3203",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = extract_features(train_windows, ['WENG'], feature_dic={'WENG_fs': 1000})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ca25aa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb5a18b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_windows.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1c98cde",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from gForceSGT import gForceSGT\n",
     "dataset = gForceSGT()\n",
@@ -135,6 +250,25 @@
     "np.save(join(path, 'test_meta'), test_meta)\n",
     "\n",
     "train_windows.shape, val_windows.shape, test_windows.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57f57bd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = join(PATH, 'ssl')\n",
+    "ssl_windows = np.load(join(path, 'ssl_windows.npy'), mmap_mode=MMAP_MODE)\n",
+    "\n",
+    "path = join(PATH, 'sgt')\n",
+    "train_windows = np.load(join(path, 'train_windows.npy'), mmap_mode=MMAP_MODE)\n",
+    "train_meta = np.load(join(path, 'train_meta.npy'), allow_pickle=True).item()\n",
+    "val_windows = np.load(join(path, 'val_windows.npy'), mmap_mode=MMAP_MODE)\n",
+    "val_meta = np.load(join(path, 'val_meta.npy'), allow_pickle=True).item()\n",
+    "test_windows = np.load(join(path, 'test_windows.npy'), mmap_mode=MMAP_MODE)\n",
+    "test_meta = np.load(join(path, 'test_meta.npy'), allow_pickle=True).item()"
    ]
   }
  ],
