transition data loader example

--- a/Prepare_Data.ipynb
+++ b/Prepare_Data.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9fcaf34d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bluepy not installed...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings, sys, os, gc\n",
     "from os.path import join\n",
@@ -27,7 +19,7 @@
     "from libemg.feature_extractor import FeatureExtractor\n",
     "\n",
     "import numpy as np, pandas as pd\n",
-    "import random, copy, time, csv\n",
+    "import random, copy, time, csv, json\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -72,146 +64,12 @@
    "source": [
     "from gForceSGT import gForceSGT\n",
     "dataset = gForceSGT()\n",
-    "data = dataset.prepare_data()\n",
+    "data = dataset.prepare_data(trans_delay=200)\n",
     "\n",
     "path = join(PATH, 'sgt')\n",
     "os.makedirs(path, exist_ok=True)\n",
     "\n",
     "np.save(join(path, 'sgt_data'), data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0b9209c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = join(PATH, 'sgt')\n",
-    "sgt_data = np.load(join(path, 'sgt_data.npy'), allow_pickle=True).item()\n",
-    "_data = sgt_data.isolate_data(\"subjects\", list(range(1)), fast=True)\n",
-    "\n",
-    "train_data = _data.isolate_data(\"rep_forms\", [0], fast=True)\n",
-    "train_data = _data.isolate_data(\"reps\", list(range(1)), fast=True)\n",
-    "train_windows, train_meta = train_data.parse_windows(SEQ, INC)\n",
-    "np.min(train_windows), np.mean(train_windows), np.max(train_windows)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "501455f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = join(PATH, 'ssl')\n",
-    "train_windows = np.load(join(path, 'ssl_windows.npy'), mmap_mode=MMAP_MODE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "058a00be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = train_windows[::10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "6fc55db8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ag = augment(torch.from_numpy(a))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "b4d39436",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-23.01625, -17.154947, -4.8020205)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f = FeatureExtractor()\n",
-    "af = f.extract_features(['WENG'], a, feature_dic={'WENG_fs': 1000}, array=True)\n",
-    "np.min(af), np.mean(af), np.max(af)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "bb370e22",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-23.016283, -17.165705, -4.612915)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f = FeatureExtractor()\n",
-    "af = f.extract_features(['WENG'], ag, feature_dic={'WENG_fs': 1000}, array=True)\n",
-    "np.min(af), np.mean(af), np.max(af)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f2bd0ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "af"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e3f3203",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = extract_features(train_windows, ['WENG'], feature_dic={'WENG_fs': 1000})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ca25aa7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb5a18b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_windows.shape"
    ]
   },
   {
