--- a/Prepare_Data.ipynb
+++ b/Prepare_Data.ipynb
@@ -10,7 +10,7 @@
     "import warnings, sys, os, gc\n",
     "from os.path import join\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "\n",
     "# import torch; print(torch.cuda.is_available())\n",
     "\n",
