withing subject train clean up

--- a/Prepare_Data.ipynb
+++ b/Prepare_Data.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9fcaf34d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bluepy not installed...\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings, sys, os, gc\n",
     "from os.path import join\n",
@@ -33,13 +41,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ed53ff1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished subject=0 | reps=6 | out=spaceship_PROCESSED/subject0.h5\n",
+      "Finished subject=1 | reps=12 | out=spaceship_PROCESSED/subject1.h5\n",
+      "Finished subject=2 | reps=6 | out=spaceship_PROCESSED/subject2.h5\n",
+      "Finished subject=3 | reps=5 | out=spaceship_PROCESSED/subject3.h5\n",
+      "Finished subject=4 | reps=6 | out=spaceship_PROCESSED/subject4.h5\n",
+      "Finished subject=5 | reps=4 | out=spaceship_PROCESSED/subject5.h5\n",
+      "Finished subject=6 | reps=6 | out=spaceship_PROCESSED/subject6.h5\n",
+      "Finished subject=7 | reps=6 | out=spaceship_PROCESSED/subject7.h5\n",
+      "Finished subject=8 | reps=6 | out=spaceship_PROCESSED/subject8.h5\n",
+      "Finished subject=9 | reps=6 | out=spaceship_PROCESSED/subject9.h5\n",
+      "Finished subject=10 | reps=6 | out=spaceship_PROCESSED/subject10.h5\n",
+      "Finished subject=11 | reps=6 | out=spaceship_PROCESSED/subject11.h5\n",
+      "Finished subject=12 | reps=5 | out=spaceship_PROCESSED/subject12.h5\n",
+      "Finished subject=13 | reps=6 | out=spaceship_PROCESSED/subject13.h5\n",
+      "Finished subject=14 | reps=6 | out=spaceship_PROCESSED/subject14.h5\n",
+      "Finished subject=15 | reps=6 | out=spaceship_PROCESSED/subject15.h5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(999836, 8, 200)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from SPACESHIP import SPACESHIP\n",
-    "dataset = SPACESHIP()\n",
+    "dataset = SPACESHIP(dataset_folder='spaceship')\n",
     "data = dataset.prepare_data()\n",
     "\n",
     "path = join(PATH, 'ssl')\n",
@@ -57,19 +98,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "70597f4c",
+   "execution_count": 3,
+   "id": "1ff07189",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset from data0_sgt to data0_sgt_PROCESSED...\n",
+      "Subject 0 processed. Output: data0_sgt_PROCESSED/S0.h5\n",
+      "Subject 1 processed. Output: data0_sgt_PROCESSED/S1.h5\n",
+      "Subject 2 processed. Output: data0_sgt_PROCESSED/S2.h5\n",
+      "Subject 3 processed. Output: data0_sgt_PROCESSED/S3.h5\n",
+      "Subject 4 processed. Output: data0_sgt_PROCESSED/S4.h5\n",
+      "Subject 5 processed. Output: data0_sgt_PROCESSED/S5.h5\n"
+     ]
+    }
+   ],
    "source": [
     "from gForceSGT import gForceSGT\n",
-    "dataset = gForceSGT()\n",
+    "dataset = gForceSGT(dataset_folder='data0_sgt')\n",
     "data = dataset.prepare_data(trans_delay=200)\n",
     "\n",
     "path = join(PATH, 'sgt')\n",
     "os.makedirs(path, exist_ok=True)\n",
     "\n",
-    "np.save(join(path, 'sgt_data'), data)"
+    "np.save(join(path, 'sgt_data0'), data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "70597f4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset from data1_sgt to data1_sgt_PROCESSED...\n",
+      "Subject 0 processed. Output: data1_sgt_PROCESSED/S0.h5\n",
+      "Subject 1 processed. Output: data1_sgt_PROCESSED/S1.h5\n",
+      "Subject 2 processed. Output: data1_sgt_PROCESSED/S2.h5\n",
+      "Subject 3 processed. Output: data1_sgt_PROCESSED/S3.h5\n",
+      "Subject 4 processed. Output: data1_sgt_PROCESSED/S4.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gForceSGT import gForceSGT\n",
+    "dataset = gForceSGT(dataset_folder='data1_sgt')\n",
+    "data = dataset.prepare_data(trans_delay=200)\n",
+    "\n",
+    "path = join(PATH, 'sgt')\n",
+    "os.makedirs(path, exist_ok=True)\n",
+    "\n",
+    "np.save(join(path, 'sgt_data1'), data)"
    ]
   },
   {
